--- a/index.html
+++ b/index.html
@@ -1,13 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
-</head>
-<body>
-    <h1>project 02</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="stylesheet" href="./assets/css/styles.css" />
+        <!-- Sen fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Sen:wght@400..800&display=swap"
+            rel="stylesheet"
+        />
+        <!-- Embed fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Sen:wght@700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <!-- *************************** Header *************************** -->
+        <header class="header fixed">
+            <div class="main-content">
+                <div class="body">
+                    <img
+                        src="./assets/img/logo.svg"
+                        alt="Lesson."
+                        class="logo"
+                    />
+                    <nav class="nav">
+                        <ul>
+                            <li class="active">
+                                <a href="#!">Home</a>
+                            </li>
+                            <li>
+                                <a href="#!">Courses</a>
+                            </li>
+                            <li>
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Reviews</a>
+                            </li>
+                        </ul>
+                        <div class="action">
+                            <a href="#!" class="btn sign-up-btn">Sign Up</a>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <!-- content ở header -->
+        <main>
+            <!-- *************************** Hero *************************** -->
+            <div class="hero">
+                <div class="main-content">
+                    <div class="body">
+                        <!-- ********** Hero left ********** -->
+                        <div class="media-block">
+                            <img
+                                class="img"
+                                src="./assets/img/pexels-bayfilm9-18567381.jpg"
+                                alt="Learn without limits and spread knowledge."
+                            />
+                            <div class="hero-summary">
+                                <div class="item">
+                                    <div
+                                        class="icon"
+                                        style="background-color: #fff9e8"
+                                    >
+                                        <img
+                                            src="./assets/img/uiux.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">20 Courses</p>
+                                        <p class="title">UI/UX Design</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div
+                                        class="icon"
+                                        style="background-color: #fcefff"
+                                    >
+                                        <img
+                                            src="./assets/img/development.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">20 Courses</p>
+                                        <p class="title">Development</p>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div
+                                        class="icon"
+                                        style="background-color: #ebeaff"
+                                    >
+                                        <img
+                                            src="./assets/img/marketing.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">30 Courses</p>
+                                        <p class="title">Marketing</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- ********** Hero right ********** -->
+                        <div class="content-block">
+                            <h1 class="heading lv1">
+                                Learn without limits and spread knowledge.
+                            </h1>
+                            <p class="desc">
+                                Build new skills for that “this is my year”
+                                feeling with courses, certificates, and degrees
+                                from world-class universities and companies.
+                            </p>
+                            <div class="cta-group">
+                                <a href="#!" class="btn hero-cta"
+                                    >See Courses</a
+                                >
+                                <button class="watch-video">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/img/play.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <span>Watch Video</span>
+                                </button>
+                            </div>
+                            <p class="desc">Recent engagement</p>
+                            <p class="desc stats">
+                                <span><strong>50k</strong> Students</span>
+                                <span><strong>70+</strong> Courses</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <!-- *************************** Popular *************************** -->
+        <div class="popular">
+            <div class="main-content">
+                <div class="popular-top">
+                    <div class="info">
+                        <h2 class="heading lv2">Our popular courses</h2>
+                        <p class="desc">
+                            Build new skills with new trendy courses and shine
+                            for the next future career.
+                        </p>
+                    </div>
+                    <div class="controls">
+                        <button class="control-btn"></button>
+                        <button class="control-btn"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
