--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
         </main>
         <!-- *************************** Popular *************************** -->
-        <div class="popular">
+        <div class="popular" style="height: 1000px">
             <div class="main-content">
                 <div class="popular-top">
                     <div class="info">
@@ -160,8 +160,119 @@
                         </p>
                     </div>
                     <div class="controls">
-                        <button class="control-btn"></button>
-                        <button class="control-btn"></button>
+                        <button class="control-btn">
+                            <img src="./assets/img/arrow-left.svg" alt="" />
+                        </button>
+                        <button class="control-btn">
+                            <img src="./assets/img/arrow-right.svg" alt="" />
+                        </button>
+                    </div>
+                </div>
+                <div class="course-list">
+                    <!-- Course 1 -->
+                    <div class="course-item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/basicwebdev.jpg"
+                                alt="Basic web design"
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp break-all"
+                                        >Basic web design</a
+                                    >
+                                </h3>
+                                <div class="rating">
+                                    <img
+                                        src="./assets/img/Star.svg"
+                                        alt="Star"
+                                        class="Star"
+                                    />
+                                    <span class="value">4.5</span>
+                                </div>
+                            </div>
+                            <p class="desc line-clamp line-2 break-all">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                        </div>
+                        <div class="foot">
+                            <span class="price">$120.75</span>
+                            <button class="btn book-btn">Book Now</button>
+                        </div>
+                    </div>
+                    <!-- Course 2 -->
+                    <div class="course-item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/uiux.jpg"
+                                alt="UI/UX design"
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp break-all"
+                                        >UI/UX design</a
+                                    >
+                                </h3>
+                                <div class="rating">
+                                    <img
+                                        src="./assets/img/Star.svg"
+                                        alt="Star"
+                                        class="Star"
+                                    />
+                                    <span class="value">4.5</span>
+                                </div>
+                            </div>
+                            <p class="desc line-clamp line-2 break-all">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                        </div>
+                        <div class="foot">
+                            <span class="price">$120.75</span>
+                            <button class="btn book-btn">Book Now</button>
+                        </div>
+                    </div>
+                    <!-- Course 3 -->
+                    <div class="course-item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/webapp.jpg"
+                                alt="Web App design"
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">
+                                    <a href="#!" class="line-clamp break-all"
+                                        >Web App design</a
+                                    >
+                                </h3>
+                                <div class="rating">
+                                    <img
+                                        src="./assets/img/Star.svg"
+                                        alt="Star"
+                                        class="Star"
+                                    />
+                                    <span class="value">4.5</span>
+                                </div>
+                            </div>
+                            <p class="desc line-clamp line-2 break-all">
+                                Get the best course, gain knowledge and shine
+                                for your future career.
+                            </p>
+                        </div>
+                        <div class="foot">
+                            <span class="price">$120.75</span>
+                            <button class="btn book-btn">Book Now</button>
+                        </div>
                     </div>
                 </div>
             </div>
