--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
         </main>
         <!-- *************************** Popular *************************** -->
-        <div class="popular" style="height: 1000px">
+        <div class="popular">
             <div class="main-content">
                 <div class="popular-top">
                     <div class="info">
@@ -272,6 +272,44 @@
                         <div class="foot">
                             <span class="price">$120.75</span>
                             <button class="btn book-btn">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- *************************** Feedback *************************** -->
+        <div class="feedback">
+            <div class="main-content">
+                <div class="feedback-list">
+                    <!-- Item 1 -->
+                    <div class="feedback-item">
+                        <div class="info">
+                            <img
+                                src="./assets/img/avatar.jpg"
+                                alt="Peter Moor"
+                                class="avatar"
+                            />
+                            <p class="title">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img
+                                src="./assets/img/open-quotes.svg"
+                                alt=""
+                                class="open-quotes"
+                            />
+                            <blockquote>
+                                Not only does my resume look impressive—filled
+                                with the names and logos of world-class
+                                institutions—but these certificates also bring
+                                me closer to my career goals by validating the
+                                skills I've learned."
+                            </blockquote>
                         </div>
                     </div>
                 </div>
