--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             </div>
         </div>
         <!-- *************************** Blog *************************** -->
-        <div class="blog" style="height: 1000px">
+        <div class="blog">
             <div class="main-content">
                 <div class="blog-top">
                     <h2 class="heading lv2">Our blog</h2>
@@ -451,5 +451,117 @@
                 </div>
             </div>
         </div>
+        <!-- *************************** Footer *************************** -->
+        <footer class="footer">
+            <div class="main-content">
+                <div class="row">
+                    <!-- column 1 -->
+                    <div class="column">
+                        <img
+                            src="./assets/img/logo-footer.svg"
+                            alt="Lesson"
+                            class="img"
+                        />
+                        <p class="desc">
+                            Need to help for your dream Career? trust us. With
+                            Lesson, study becomes a lot easier with us.
+                        </p>
+                        <div class="socials">
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/Twitter.svg"
+                                    alt="Twitter"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/facebook.svg"
+                                    alt="facebook"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/linked_in.svg"
+                                    alt="linked_in"
+                                    class="icon"
+                                />
+                            </a>
+                            <a href="#!"
+                                ><img
+                                    src="./assets/img/instagram.svg"
+                                    alt="instagram"
+                                    class="icon"
+                                />
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- column 2 -->
+                    <div class="column">
+                        <h3 class="title">Company</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#!">Features</a>
+                            </li>
+                            <li>
+                                <a href="#!">Our Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Latest News</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- column 3 -->
+                    <div class="column">
+                        <h3 class="title">Support</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!">FAQ’s</a>
+                            </li>
+                            <li>
+                                <a href="#!">Terms & Conditions</a>
+                            </li>
+                            <li>
+                                <a href="#!">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- column 4 -->
+                    <div class="column">
+                        <h3 class="title">Address</h3>
+                        <ul class="list">
+                            <li>
+                                <a href="#!"
+                                    ><strong>Location:</strong> 27 Division St,
+                                    New York, NY 10002, USA</a
+                                >
+                            </li>
+                            <li>
+                                <a href="#!"
+                                    ><strong>Email:</strong> email@gmail.com</a
+                                >
+                            </li>
+                            <li>
+                                <a href="#!"
+                                    ><strong>Phone:</strong> + 000 1234 567
+                                    890</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>Copyright &copy2022 webdesign.gdn All rights reserved</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
