--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
             <div class="main-content">
                 <div class="popular-top">
                     <div class="info">
-                        <h2 class="heading lv2">Our popular courses</h2>
+                        <h2 class="heading lv2 line-clamp">
+                            Our popular courses
+                        </h2>
                         <p class="desc">
                             Build new skills with new trendy courses and shine
                             for the next future career.
@@ -161,10 +163,36 @@
                     </div>
                     <div class="controls">
                         <button class="control-btn">
-                            <img src="./assets/img/arrow-left.svg" alt="" />
+                            <svg
+                                width="8"
+                                height="14"
+                                viewBox="0 0 8 14"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M6.5 0.5L0.5 6.5L6.5 12.5"
+                                    stroke="currentcolor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
                         </button>
                         <button class="control-btn">
-                            <img src="./assets/img/arrow-right.svg" alt="" />
+                            <svg
+                                width="8"
+                                height="14"
+                                viewBox="0 0 8 14"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M0.5 0.5L6.5 6.5L0.5 12.5"
+                                    stroke="currentcolor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
                         </button>
                     </div>
                 </div>
@@ -217,8 +245,8 @@
                             <div class="head">
                                 <h3 class="title">
                                     <a href="#!" class="line-clamp break-all"
-                                        >UI/UX design</a
-                                    >
+                                        >UI/UX design
+                                    </a>
                                 </h3>
                                 <div class="rating">
                                     <img
@@ -281,7 +309,38 @@
         <div class="feedback">
             <div class="main-content">
                 <div class="feedback-list">
-                    <!-- Item 1 -->
+                    <!-- Feedback Item 1 -->
+                    <div class="feedback-item">
+                        <div class="info">
+                            <img
+                                src="./assets/img/avatar.jpg"
+                                alt="Peter Moor"
+                                class="avatar"
+                            />
+                            <p class="title">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img
+                                src="./assets/img/open-quotes.svg"
+                                alt=""
+                                class="open-quotes"
+                            />
+                            <blockquote>
+                                Not only does my resume look impressive—filled
+                                with the names and logos of world-class
+                                institutions—but these certificates also bring
+                                me closer to my career goals by validating the
+                                skills I've learned."
+                            </blockquote>
+                        </div>
+                    </div>
+                    <!-- Feedback Item 2 -->
                     <div class="feedback-item">
                         <div class="info">
                             <img
@@ -294,6 +353,37 @@
                             <div class="dots">
                                 <span class="dot"></span>
                                 <span class="dot active"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img
+                                src="./assets/img/open-quotes.svg"
+                                alt=""
+                                class="open-quotes"
+                            />
+                            <blockquote>
+                                Not only does my resume look impressive—filled
+                                with the names and logos of world-class
+                                institutions—but these certificates also bring
+                                me closer to my career goals by validating the
+                                skills I've learned."
+                            </blockquote>
+                        </div>
+                    </div>
+                    <!-- Feedback Item 3 -->
+                    <div class="feedback-item">
+                        <div class="info">
+                            <img
+                                src="./assets/img/avatar.jpg"
+                                alt="Peter Moor"
+                                class="avatar"
+                            />
+                            <p class="title">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
                                 <span class="dot"></span>
                             </div>
                         </div>
@@ -330,7 +420,7 @@
                         />
                     </div>
                     <div class="content">
-                        <h2 class="heading lv2">
+                        <h2 class="heading lv2 line-clamp">
                             Learner outcomes through our awesome platform
                         </h2>
                         <p class="desc">
@@ -356,7 +446,7 @@
                         />
                     </div>
                     <div class="content">
-                        <h2 class="heading lv2">
+                        <h2 class="heading lv2 line-clamp">
                             Take the next step toward your personal and
                             professional goals with Lesson.
                         </h2>
@@ -374,7 +464,7 @@
         <div class="blog">
             <div class="main-content">
                 <div class="blog-top">
-                    <h2 class="heading lv2">Our blog</h2>
+                    <h2 class="heading lv2 line-clamp">Our blog</h2>
                     <p class="desc">
                         Read our regular travel blog and know the latest update
                         of tour and travel
@@ -434,6 +524,126 @@
                         <div class="info">
                             <span class="date">21 November 2021</span>
                             <div class="line"></div>
+                            <h3 class="title">
+                                <a href="#!"
+                                    >How to become a pro web designer in 2022
+                                    and get remot job?</a
+                                >
+                            </h3>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <!-- blog item 4 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/blog-1.jpg"
+                                alt=""
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"
+                                    >How to become a pro web designer in 2022
+                                    and get remot job?</a
+                                >
+                            </h3>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <!-- blog item 5 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/blog-1.jpg"
+                                alt=""
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"
+                                    >How to become a pro web designer in 2022
+                                    and get remot job?</a
+                                >
+                            </h3>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <!-- blog item 6 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/blog-1.jpg"
+                                alt=""
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"
+                                    >How to become a pro web designer in 2022
+                                    and get remot job?</a
+                                >
+                            </h3>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <!-- blog item 7 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/blog-1.jpg"
+                                alt=""
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"
+                                    >How to become a pro web designer in 2022
+                                    and get remot job?</a
+                                >
+                            </h3>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <!-- blog item 8 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/blog-1.jpg"
+                                alt=""
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
+                            <h3 class="title">
+                                <a href="#!"
+                                    >How to become a pro web designer in 2022
+                                    and get remot job?</a
+                                >
+                            </h3>
+                            <a href="#!" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <!-- blog item 9 -->
+                    <div class="item">
+                        <a href="#!">
+                            <img
+                                src="./assets/img/blog-1.jpg"
+                                alt=""
+                                class="thumb"
+                            />
+                        </a>
+                        <div class="info">
+                            <span class="date">21 November 2021</span>
                             <h3 class="title">
                                 <a href="#!"
                                     >How to become a pro web designer in 2022
@@ -534,7 +744,7 @@
                             </li>
                         </ul>
                     </div>
-                    
+
                     <!-- column 4 -->
                     <div class="column">
                         <h3 class="title">Address</h3>
